test/fixtures/source-map/output/source_map_throw_first_tick.snapshot
reachable
*/test/fixtures/source-map/typescript-throw.ts:18
    throw Error('an exception');
    ^


Error: an exception
    at branch (*/test/fixtures/source-map/typescript-throw.ts:18:11)
    at Object.<anonymous> (*/test/fixtures/source-map/typescript-throw.ts:24:1)

Node.js *
